# 25_4_2_homework

./: CMakeLists.txt  Task2.cpp  Task2.h
include/: Task2.h  cpu.h  disk.h  gpu.h  kbd.h  ram.h
src/: CMakeLists.txt  Task2.cpp  cpuCode.cpp  diskCode.cpp  gpuCode.cpp  kbdCode.cpp
